--- a/index.html
+++ b/index.html
@@ -1,24 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="style.css">
   <script src="basic01.js" defer></script>
   <script src="array.js" defer></script>
-  <script src="objects.js" defer></script> 
+  <script src="objects.js" defer></script>
   <script src="functions.js" defer></script>
   <script src="callback.js"></script>
   <script src="controlflow.js"></script>
   <script src="loops.js"></script>
   <script src="loops2.js"></script>
-  <script src="dom.js"></script>
+  <script src="dom.js" defer></script>
+  <script src="dom1.js" defer></script>
 </head>
+
 <body>
-  <h1>chai aur code</h1>
+  <!-- DOM.JS -->
+  <!-- <h1>chai aur code</h1>
   <div class="bgblack">
-    <h1 class="heading">dom learning by chai or code</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, soluta.</p>
+    <h1 class="heading" id="title">dom learning by chai or code</h1>
+    <h2>Lorem ipsum dolor sit amet.</h2>
+    <h2>Lorem ipsum dolor sit amet.</h2>
+    <h2>Lorem ipsum dolor sit amet.</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, soluta.</p> 
+
+    <ul>
+      <li class="list-item">one</li>
+      <li class="list-item">two</li>
+      <li class="list-item">three</li>
+    </ul>
   </div>
+
+  -->
+
+  <!--  DOM1 .JS --->
+<!-- 
+  <div class="parent">
+    <div class="day">MONDAY</div>
+    <div class="day">TUESDAY</div>
+    <div class="day">WEDNESDAY</div>
+    <div class="day">THURSDAY</div>
+
+  </div> -->
+
+  
+
 </body>
+
 </html>
