ist project added

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <script src="array.js" defer></script>
   <script src="objects.js" defer></script>
   <script src="functions.js" defer></script>
-  <script src="callback.js"></script>
-  <script src="controlflow.js"></script>
-  <script src="loops.js"></script>
-  <script src="loops2.js"></script>
+  <script src="callback.js"defer></script>
+  <script src="controlflow.js"defer></script>
+  <script src="loops.js" defer></script>
+  <script src="loops2.js" defer></script>
   <script src="dom.js" defer></script>
   <script src="dom1.js" defer></script>
 </head>
@@ -33,13 +33,13 @@
       <li class="list-item">two</li>
       <li class="list-item">three</li>
     </ul>
-  </div>
+  </div> -->
 
-  -->
+ 
 
   <!--  DOM1 .JS --->
-<!-- 
-  <div class="parent">
+
+  <!-- <div class="parent">
     <div class="day">MONDAY</div>
     <div class="day">TUESDAY</div>
     <div class="day">WEDNESDAY</div>
@@ -47,9 +47,11 @@
 
   </div> -->
 
-  <ol class="language">
+  <!-- for add and remove elements -->
+
+  <!-- <ol class="language">
     <li>JavaScript</li>
-  </ol>
+  </ol> -->
 
 </body>
 
