added new project

--- a/project1/index.html
+++ b/project1/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>color scheme switcher</title>
   <link rel="stylesheet" href="style.css">
+<script src="index.js" defer></script>
 </head>
 <body>
   <div class="conatiner">
@@ -17,6 +18,5 @@
   <span>to change the background color of this page</span>
   </h2>
 </div>
-<script src="index.js"></script>
 </body>
 </html>
