added new files

--- a/project4/index.html
+++ b/project4/index.html
@@ -9,14 +9,18 @@
 </head>
 <body>
   <div class="container">
-    <h1>Guess a Number </h1>
+    <h1>Guess a Number between 1 and 10 </h1>
     <form class="form">
     <input type="text" id="guessField" class="guessField">
     <input type="submit"  id="subt" value="Submit guess" class="btn">
   </form>
   <div class="resultParas">
-    <p>Previous Guess <span class="Guessess"></span></p>
-    <p>Guess Remaning <span class="lastResult">10</span></p>
+    <p>Previous Guess
+       <span class="Guessess"></span>
+      </p>
+    <p>Guess Remaning
+       <span class="lastResult">10</span>
+      </p>
     <p class="low"></p>
   </div>
   </div>
