--- a/project2/index.html
+++ b/project2/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="container">
     <h1>BMI CALCULATOR</h1>
-    <form action="">
+    <form>
       <p><label for="height">Height in CM</label>
       <input type="text" id="height"></p>
       <p><label for="weight">Weight in KG</label>
