--- a/index.html
+++ b/index.html
@@ -5,17 +5,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="style.css">
   <script src="basic01.js" defer></script>
-  <script src="array.js" defer></script>
-  <script src="objects.js" defer></script>
-  <script src="functions.js" defer></script>
+   <script src="array.js" defer></script>
+   <script src="objects.js" defer></script>
+   <script src="functions.js" defer></script>
   <script src="callback.js"defer></script>
   <script src="controlflow.js"defer></script>
   <script src="loops.js" defer></script>
   <script src="loops2.js" defer></script>
-  <script src="dom.js" defer></script>
-  <script src="dom1.js" defer></script>
+    <script src="dom.js" defer></script>
+  <script src="dom1.js" defer></script> 
 </head>
 
 <body>
@@ -38,8 +37,8 @@
  
 
   <!--  DOM1 .JS --->
-
-  <!-- <div class="parent">
+<!-- 
+  <div class="parent">
     <div class="day">MONDAY</div>
     <div class="day">TUESDAY</div>
     <div class="day">WEDNESDAY</div>
@@ -48,10 +47,10 @@
   </div> -->
 
   <!-- for add and remove elements -->
-
-  <!-- <ol class="language">
+<!--
+<ol class="language">
     <li>JavaScript</li>
-  </ol> -->
+  </ol>  -->
 
 </body>
 
