--- a/classes/index.html
+++ b/classes/index.html
@@ -4,9 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="index.js" defer></script>
+  <script src="index1.js" defer></script>
   <title>classes</title>
 </head>
 <body>
+  <button>click me</button>
   
 </body>
 </html>
